--- a/Grocery App/Grocery App/Base.lproj/Main.storyboard
+++ b/Grocery App/Grocery App/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
                                 <color key="backgroundColor" red="0.33312780124591923" green="1" blue="0.28947173781682922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="AddItemButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kKX-yM-3GM"/>
+                                    <segue destination="gHj-iT-z5A" kind="presentation" modalPresentationStyle="overCurrentContext" id="Ag8-EU-hvK"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -262,9 +262,12 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRx-NB-Vq8">
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRx-NB-Vq8">
                                         <rect key="frame" x="172.5" y="166" width="30" height="30"/>
                                         <state key="normal" title="Add"/>
+                                        <connections>
+                                            <segue destination="hzn-CG-C8f" kind="unwind" identifier="SaveItem" unwindAction="saveItem:" id="PMm-uz-wlG"/>
+                                        </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Quantity" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CzB-JN-GN3">
                                         <rect key="frame" x="16" y="125" width="125" height="35"/>
@@ -293,6 +296,7 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.78000000000000003" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="ebk-Pe-dBx" firstAttribute="leading" secondItem="8Vf-zx-yd7" secondAttribute="leading" id="MgJ-k7-Bps"/>
                             <constraint firstItem="ebk-Pe-dBx" firstAttribute="trailing" secondItem="8Vf-zx-yd7" secondAttribute="trailing" id="Ta2-Xr-Lej"/>
@@ -303,6 +307,7 @@
                     <value key="contentSizeForViewInPopover" type="size" width="375" height="200"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="addItemButton" destination="WRx-NB-Vq8" id="r5F-xy-yiO"/>
                         <outlet property="itemNameTextField" destination="Kup-RF-Vh8" id="fmi-4s-Kwa"/>
                         <outlet property="quantityTextField" destination="CzB-JN-GN3" id="4Nb-di-hj3"/>
                         <outletCollection property="buttonsArray" destination="HYo-cT-e8e" collectionClass="NSMutableArray" id="Pdb-LZ-qwG"/>
@@ -315,8 +320,9 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZPb-2j-pZ3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="hzn-CG-C8f" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="880.79999999999995" y="-18.890554722638683"/>
+            <point key="canvasLocation" x="916" y="134"/>
         </scene>
     </scenes>
 </document>
