Add chevron as outlet in HeaderTableViewCell

--- a/Grocery App/Grocery App/Storyboards/Base.lproj/Main.storyboard
+++ b/Grocery App/Grocery App/Storyboards/Base.lproj/Main.storyboard
@@ -66,35 +66,41 @@
                                             <outlet property="quantityLabel" destination="9gV-3b-7ee" id="5Ie-XD-sAn"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" rowHeight="60" id="Mle-7t-XJC" customClass="HeaderTableViewCell" customModule="Grocery_App" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="83" width="375" height="60"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" rowHeight="58" id="Mle-7t-XJC" customClass="HeaderTableViewCell" customModule="Grocery_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="83" width="375" height="58"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mle-7t-XJC" id="xA5-wf-qRB">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="58"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Emoji" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCj-6w-qZh">
-                                                    <rect key="frame" x="15" y="15.5" width="57" height="29"/>
+                                                    <rect key="frame" x="15" y="14.5" width="57" height="29"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="section_title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="onE-8Q-hf7">
-                                                    <rect key="frame" x="130.5" y="16.5" width="114" height="27"/>
+                                                    <rect key="frame" x="130.5" y="15.5" width="114" height="27"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron" translatesAutoresizingMaskIntoConstraints="NO" id="1hX-NQ-KHO">
+                                                    <rect key="frame" x="330" y="24" width="22" height="10"/>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="YCj-6w-qZh" firstAttribute="leading" secondItem="xA5-wf-qRB" secondAttribute="leadingMargin" id="7ri-aN-BJi"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="1hX-NQ-KHO" secondAttribute="trailing" constant="8" id="DvY-WY-BO9"/>
                                                 <constraint firstItem="onE-8Q-hf7" firstAttribute="centerY" secondItem="xA5-wf-qRB" secondAttribute="centerY" id="F2s-ZB-Tyc"/>
+                                                <constraint firstItem="1hX-NQ-KHO" firstAttribute="centerY" secondItem="xA5-wf-qRB" secondAttribute="centerY" id="Kfx-KG-H9I"/>
                                                 <constraint firstItem="YCj-6w-qZh" firstAttribute="centerY" secondItem="xA5-wf-qRB" secondAttribute="centerY" id="cIn-yS-gkP"/>
                                                 <constraint firstItem="onE-8Q-hf7" firstAttribute="centerX" secondItem="xA5-wf-qRB" secondAttribute="centerX" id="dG6-uc-a9K"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.92549019607843142" green="0.92549019607843142" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
+                                            <outlet property="chevronImage" destination="1hX-NQ-KHO" id="RFg-Rc-kBK"/>
                                             <outlet property="emojiLabel" destination="YCj-6w-qZh" id="hBe-wN-uc2"/>
                                             <outlet property="sectionLabel" destination="onE-8Q-hf7" id="ZsS-Fz-0ub"/>
                                         </connections>
@@ -364,4 +370,7 @@
             <point key="canvasLocation" x="916" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chevron" width="22" height="10.5"/>
+    </resources>
 </document>
